# crt-vizzie

./: .gitignore  4-20-2026-features-todos.md  CLAUDE.md  PERFORMANCE.md  README.md  REPORT.md  ascii-art.js  audio.js  background-fx.js  background.js  config.js  crt-visualizer-plan.md  fusion-automation.js  fusion-panel.js  fusion-params.js  hardware-bridge.js  index.html  pi-rewrite-plan.md  sketch.js  vj-sync.js  webgl-ascii-art-plan.md
background_images/: manifest.json
modes/: fusion.js  glitch.js  life.js  lissajous.js  matrix.js  morph.js  spectrum.js  tunnel.js  vu.js  waveform.js
native/: .gitignore  ARCHITECTURE.md  Cargo.toml  HARDWARE_SETUP.md  PERFORMANCE_REVIEW.md  PHASE0_SPIKE.md  README.md  WINDOWS_DEV.md  build.rs
native/.cargo/: config.toml
native/assets/: atlas.json
native/examples/: input_probe.rs
native/scripts/: bake-atlas.js  run-release.sh
native/src/: ascii_art.rs  audio.rs  audio_dev.rs  config.rs  frontend.rs  fusion.rs  hw_input.rs  input.rs  libretro.rs  main.rs  platform.rs  post.rs  quad.rs  renderer.rs  rng.rs  sdl_gl.rs  ui.rs
pi/: HARDWARE_SETUP.md  SIM.md  bridge.py  hw-mapping.json  led_output.py  pi-bridge.py  pi-sim.py  pi-start.sh  sim-ui.html
tools/mkv-convert/: README.md  convert.py  test_convert.py
tools/video-clipper/: README.md  clip.py  test_clip.py
v2/: ascii-art.js  audio.js  background.js  bg-folder.js  bg-fx-panel.js  bg-fx.js  config.js  fusion.js  hardware-bridge.js  index.html  kiosk.sh  renderer.js  sketch.js  startup.js
v2/bg-media/: gen-manifest.py
v2/shaders/: frag.glsl  vert.glsl
